kubernetes-infra/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cat-ecommerce
  labels:
    name: cat-ecommerce
